Add api key to request headers

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ WIFI_PASSWORD=your_wifi_password
 
 # API Configuration
 API_ENDPOINT=http://192.168.1.100:8080/api/sensors
+API_KEY=your-secret-api-key-here
