--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2024"
 license = "MIT OR Apache-2.0"
 description = "ENS160 air quality sensor on Raspberry Pi Pico W"
 
+[features]
+default = []
+# Enable USB serial logging (requires USB host connection - will hang on power-only USB)
+usb-logging = ["dep:embassy-usb", "dep:embassy-usb-logger"]
+
 [dependencies]
 # Embassy framework (crates.io)
 embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
@@ -12,8 +17,8 @@ embassy-sync = { version = "0.7.2", features = ["defmt"] }
 embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
 embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
-embassy-usb = { version = "0.5.1", features = ["defmt"] }
-embassy-usb-logger = "0.5.1"
+embassy-usb = { version = "0.5.1", features = ["defmt"], optional = true }
+embassy-usb-logger = { version = "0.5.1", optional = true }
 
 # CYW43 WiFi chip (for Pico W LED and networking)
 cyw43 = { version = "0.6.0", features = ["defmt", "firmware-logs"] }
